tests/ui/rfcs/rfc-2632-const-trait-impl/staged-api.stable.stderr
error: trait implementations cannot be const stable yet
  --> $DIR/staged-api.rs:21:1
   |
LL | / impl const MyTrait for Foo {
LL | |
LL | |     fn func() {}
LL | | }
   | |_^
   |
   = note: see issue #67792 <https://github.com/rust-lang/rust/issues/67792> for more information

error: function has missing const stability attribute
  --> $DIR/staged-api.rs:43:1
   |
LL | / pub const fn const_context_not_const_stable() {
LL | |
LL | |     Unstable::func();
LL | |
...  |
LL | |     // ^ fails, because the `foo` feature is not active
LL | | }
   | |_^

error: `<staged_api::Unstable as staged_api::MyTrait>::func` is not yet stable as a const fn
  --> $DIR/staged-api.rs:34:5
   |
LL |     Unstable::func();
   |     ^^^^^^^^^^^^^^^^
   |
   = note: use of unstable library feature `unstable`
   = help: add `#![feature(unstable)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: `<staged_api::Unstable as staged_api::MyTrait>::func` is not yet stable as a const fn
  --> $DIR/staged-api.rs:45:5
   |
LL |     Unstable::func();
   |     ^^^^^^^^^^^^^^^^
   |
   = note: use of unstable library feature `unstable`
   = help: add `#![feature(unstable)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: `<staged_api::Unstable as staged_api::MyTrait>::func` is not yet stable as a const fn
  --> $DIR/staged-api.rs:55:5
   |
LL |     Unstable::func();
   |     ^^^^^^^^^^^^^^^^
   |
   = help: const-stable functions can only call other const-stable functions
   = note: use of unstable library feature `unstable`

error: aborting due to 5 previous errors

